[gd_scene load_steps=22 format=2]

[ext_resource path="res://Images/Player/Idle1.png" type="Texture" id=1]
[ext_resource path="res://Player/Scripts/movement.gd" type="Script" id=2]
[ext_resource path="res://DrawMouse.gd" type="Script" id=3]
[ext_resource path="res://Images/Player/Idle3.png" type="Texture" id=4]
[ext_resource path="res://Images/Player/Jump3.png" type="Texture" id=5]
[ext_resource path="res://Images/Player/Idle4.png" type="Texture" id=6]
[ext_resource path="res://Images/Player/Idle2.png" type="Texture" id=7]
[ext_resource path="res://Images/Player/Walk4.png" type="Texture" id=8]
[ext_resource path="res://Images/Player/Walk1.png" type="Texture" id=9]
[ext_resource path="res://Images/Player/Walk3.png" type="Texture" id=10]
[ext_resource path="res://Images/Player/Walk2.png" type="Texture" id=11]
[ext_resource path="res://Images/Player/Jump1.png" type="Texture" id=12]
[ext_resource path="res://Images/Player/Jump2.png" type="Texture" id=13]
[ext_resource path="res://Images/Player/Fall1.png" type="Texture" id=14]
[ext_resource path="res://Images/Player/Fall4.png" type="Texture" id=15]
[ext_resource path="res://Images/Player/Fall2.png" type="Texture" id=16]
[ext_resource path="res://Images/Player/Fall3.png" type="Texture" id=17]
[ext_resource path="res://Player/Bullet.tscn" type="PackedScene" id=18]
[ext_resource path="res://Theme_And_Font/Main_Theme.tres" type="Theme" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 12 ), ExtResource( 17 ) ],
"loop": false,
"name": "Ledge_Fall",
"speed": 12.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 15 ) ],
"loop": true,
"name": "Fall",
"speed": 7.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 5 ) ],
"loop": true,
"name": "Jump",
"speed": 6.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 8 ) ],
"loop": true,
"name": "Walk",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 7 )

[node name="Player" type="KinematicBody2D"]
z_index = -1
collision_layer = 2
collision_mask = 17
script = ExtResource( 2 )
SPEED = 140
AIR_SPEED = 120
MAX_AIR_SPEED = -200
ACCEL = 25
AIR_ACCEL = 27
bullet = ExtResource( 18 )

[node name="left" type="RayCast2D" parent="."]
position = Vector2( -2, 11 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 17

[node name="right" type="RayCast2D" parent="."]
position = Vector2( 4, 11 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 17

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 4 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -3, -10 )
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -170.0
margin_top = -94.0
margin_right = -170.0
margin_bottom = -94.0
theme = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bullets" type="Label" parent="Control"]
margin_left = 146.0
margin_top = -10.0
margin_right = 186.0
margin_bottom = 10.0
rect_scale = Vector2( 1.21066, 0.991629 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coyote" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BulletSpawn" type="Position2D" parent="."]
position = Vector2( 1.04055, -9.43933 )

[node name="BulletContainer" type="Node" parent="."]
